docs/envoy/v1.13.0/_sources/api-v3/config/health_checker/redis/v2/redis.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/health_checker/redis/v2/redis.proto:

Redis
=====

.. _extension_envoy.health_checkers.redis:


This extension may be referenced by the qualified name *envoy.health_checkers.redis*

.. note::
  

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

Redis health checker :ref:`configuration overview <config_health_checkers_redis>`.

.. _envoy_v3_api_msg_config.health_checker.redis.v2.Redis:

config.health_checker.redis.v2.Redis
------------------------------------

`[config.health_checker.redis.v2.Redis proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/health_checker/redis/v2/redis.proto#L12>`_


.. code-block:: json

  {
    "key": "..."
  }

.. _envoy_v3_api_field_config.health_checker.redis.v2.Redis.key:

key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If set, optionally perform ``EXISTS <key>`` instead of ``PING``. A return value
  from Redis of 0 (does not exist) is considered a passing healthcheck. A return value other
  than 0 is considered a failure. This allows the user to mark a Redis instance for maintenance
  by setting the specified key to any value and waiting for traffic to drain.
  
  

